--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "discord.js": "^14.2.0",
     "express": "^4.18.1",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "twitter-api-v2": "^1.12.5"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
