--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "discord.js": "^14.2.0",
     "express": "^4.18.1",
     "node-fetch": "^2.6.7",
+    "snoostorm": "^1.5.2",
+    "snoowrap": "^1.23.0",
     "twitter-api-v2": "^1.12.5"
   },
   "devDependencies": {
