--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^14.2.0",
     "express": "^4.18.1",
+    "mongoose": "^6.5.2",
     "node-fetch": "^2.6.7",
     "snoostorm": "^1.5.2",
     "snoowrap": "^1.23.0",
